--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="col-md-6" >
                         <canvas style="max-width: 600px"></canvas>
 
-                        <a id="download" class="btn btn-secondary" download="myImage.jpg" href="" onclick="download_img(this);">Download to myImage.jpg</a>
+                        <a id="download" class="btn btn-secondary" download="myImage.jpg" href="" onclick="download_img(this);">Descargar imagen</a>
                     </div>
                 </div>
             </div>
